--- a/src/main/resources/fxml/Customer.fxml
+++ b/src/main/resources/fxml/Customer.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,6 +11,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -42,10 +44,25 @@
                      </font>
                   </Label>
                </children>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
             </HBox>
-            <HBox alignment="BOTTOM_LEFT" prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="dashboard1" mnemonicParsing="false" onMouseClicked="#opendashboard" prefHeight="44.0" prefWidth="101.0" text="BYTE_ME">
+                  <Label alignment="CENTER" graphicTextGap="10.0" text="Customer Details">
+                     <HBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="15.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button fx:id="dashboard1" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#opendashboard" prefHeight="44.0" prefWidth="49.0">
                      <graphic>
                         <ImageView fitHeight="46.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -53,22 +70,36 @@
                            </image>
                         </ImageView>
                      </graphic>
-                  </Button>
-                  <HBox prefHeight="66.0" prefWidth="210.0" />
-                  <ImageView fitHeight="39.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/kisspng-computer-icons-web-search-engine-website-download-search-png-simple-5ab0b1e73838d8.9158675315215293192303.png" />
-                     </image>
-                  </ImageView>
-                  <TextField fx:id="searchtext" prefHeight="42.0" prefWidth="185.0" promptText="Search Customer">
                      <HBox.margin>
-                        <Insets right="9.0" />
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+                  <Region prefHeight="58.0" prefWidth="96.0" />
+                  <FontAwesomeIconView glyphName="SEARCH" size="25">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin>
+                  </FontAwesomeIconView>
+                  <TextField fx:id="searchtext" alignment="CENTER" prefHeight="42.0" prefWidth="185.0" promptText="Search Customer">
+                     <HBox.margin>
+                        <Insets />
                      </HBox.margin>
                   </TextField>
-                  <Button fx:id="addcustomerbutton" layoutX="160.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#addcustomer" prefHeight="40.0" prefWidth="54.0" text="Add">
+                  <Region layoutX="77.0" layoutY="10.0" prefHeight="58.0" prefWidth="18.0" />
+                  <Button fx:id="addcustomerbutton" alignment="CENTER" layoutX="160.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#addcustomer" prefHeight="30.0" prefWidth="54.0" text="Add">
                      <HBox.margin>
-                        <Insets left="9.0" />
+                        <Insets />
                      </HBox.margin>
+                  </Button>
+                  <Region layoutX="77.0" layoutY="10.0" prefHeight="58.0" prefWidth="96.0" />
+                  <Button fx:id="addcustomerbutton1" alignment="CENTER" layoutX="386.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#addcustomer" prefHeight="40.0" prefWidth="54.0">
+                     <graphic>
+                        <ImageView fitHeight="32.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../img/logout_icon-icons.com_51025.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
                </children>
                <VBox.margin>
@@ -78,25 +109,4 @@
          </children>
       </VBox>
    </top>
-   <left>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="logout2" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#logoutnow" prefHeight="43.0" prefWidth="87.0">
-               <VBox.margin>
-                  <Insets top="250.0" />
-               </VBox.margin>
-               <graphic>
-                  <ImageView fitHeight="32.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../img/logout_icon-icons.com_51025.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <padding>
-                  <Insets right="30.0" />
-               </padding>
-            </Button>
-         </children>
-      </VBox>
-   </left>
 </BorderPane>
