--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -41,7 +41,7 @@
                   <Region prefHeight="12.0" prefWidth="276.0" />
                   <HBox alignment="CENTER" prefHeight="36.0" prefWidth="310.0">
                      <children>
-                        <Button fx:id="loginbuttons1" mnemonicParsing="false" prefHeight="35.0" prefWidth="124.0" style="-fx-background-color: #086ed4;" stylesheets="@../css/styling.css" text="Login" textFill="#ececec">
+                        <Button fx:id="loginbuttons1" mnemonicParsing="false" onMouseClicked="#loop" prefHeight="35.0" prefWidth="124.0" style="-fx-background-color: #086ed4;" stylesheets="@../css/styling.css" text="Login" textFill="#ececec">
                            <HBox.margin>
                               <Insets right="2.0" />
                            </HBox.margin>
