--- a/src/main/resources/fxml/signup.fxml
+++ b/src/main/resources/fxml/signup.fxml
@@ -45,7 +45,7 @@
                   <Region prefHeight="7.0" prefWidth="276.0" />
                   <HBox alignment="CENTER" prefHeight="36.0" prefWidth="310.0">
                      <children>
-                        <Button fx:id="login11button" mnemonicParsing="false" onMouseClicked="#loginagain" prefHeight="35.0" prefWidth="124.0" text="Login">
+                        <Button fx:id="loginagain" mnemonicParsing="false" onMouseClicked="#loginagain" prefHeight="35.0" prefWidth="124.0" text="Login">
                            <HBox.margin>
                               <Insets right="2.0" />
                            </HBox.margin>
@@ -71,7 +71,7 @@
                   <Region layoutX="10.0" layoutY="119.0" prefHeight="13.0" prefWidth="276.0" />
                   <TextField fx:id="newname" alignment="CENTER" layoutX="10.0" layoutY="176.0" maxWidth="400.0" prefHeight="32.0" prefWidth="276.0" promptText="Name" style="-fx-background-radius: 10;" />
                   <Region layoutX="10.0" layoutY="636.0" prefHeight="11.0" prefWidth="276.0" />
-                  <TextField fx:id="newdate" alignment="CENTER" layoutX="608.0" layoutY="588.0" maxWidth="400.0" prefHeight="32.0" prefWidth="276.0" promptText="Date" style="-fx-background-radius: 10;" />
+                  <TextField fx:id="newdate" alignment="CENTER" layoutX="608.0" layoutY="588.0" maxWidth="400.0" prefHeight="32.0" prefWidth="276.0" promptText="Date of Birth" style="-fx-background-radius: 10;" />
                   <Region layoutX="10.0" layoutY="657.0" prefHeight="11.0" prefWidth="276.0" />
                   <TextField fx:id="newphonenumber" alignment="CENTER" layoutX="608.0" layoutY="609.0" maxWidth="400.0" prefHeight="32.0" prefWidth="276.0" promptText="Phone Number" style="-fx-background-radius: 10;" />
                   <Region prefHeight="11.0" prefWidth="276.0" />
@@ -93,7 +93,7 @@
                      </children>
                   </VBox>
                   <Region layoutX="10.0" layoutY="168.0" prefHeight="10.0" prefWidth="276.0" />
-                  <Button fx:id="login12" mnemonicParsing="false" onMouseClicked="#validatesignup" prefHeight="35.0" prefWidth="162.0" style="-fx-background-color: #086ed4; -fx-background-radius: 15;" text="SignUp" textFill="WHITE">
+                  <Button fx:id="signup" mnemonicParsing="false" onMouseClicked="#validatesignup" prefHeight="35.0" prefWidth="162.0" style="-fx-background-color: #086ed4; -fx-background-radius: 15;" text="SignUp" textFill="WHITE">
                      <font>
                         <Font size="15.0" />
                      </font>
