--- a/src/main/resources/fxml/Customer.fxml
+++ b/src/main/resources/fxml/Customer.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -78,12 +77,15 @@
                      </HBox.margin>
                   </Button>
                   <Region prefHeight="58.0" prefWidth="96.0" />
-                  <FontAwesomeIconView glyphName="SEARCH" size="25">
+                  <ImageView fitHeight="26.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/kisspng-computer-icons-web-search-engine-website-download-search-png-simple-5ab0b1e73838d8.9158675315215293192303.png" />
+                     </image>
                      <HBox.margin>
                         <Insets right="5.0" />
                      </HBox.margin>
-                  </FontAwesomeIconView>
-                  <TextField fx:id="searchtext" alignment="CENTER" prefHeight="42.0" prefWidth="185.0" promptText="Search Customer">
+                  </ImageView>
+                  <TextField fx:id="searchtext" alignment="CENTER" prefHeight="34.0" prefWidth="179.0" promptText="Search Customer">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
