--- a/src/main/resources/fxml/cashier.fxml
+++ b/src/main/resources/fxml/cashier.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <center>
@@ -30,26 +32,48 @@
          <children>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button mnemonicParsing="false" text="Back" />
-                  <Region layoutX="88.0" layoutY="10.0" prefHeight="46.0" prefWidth="111.0" />
-                  <Region layoutX="134.0" layoutY="10.0" prefHeight="46.0" prefWidth="92.0" />
                   <Label prefHeight="31.0" prefWidth="260.0" text="My Market Management">
                      <font>
                         <Font name="System Bold" size="21.0" />
                      </font>
                   </Label>
-                  <Region prefHeight="46.0" prefWidth="92.0" />
                </children>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
+                  <Label alignment="CENTER" prefHeight="18.0" prefWidth="114.0" text="Cashier Details">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="15.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button mnemonicParsing="false">
+                     <graphic>
+                        <ImageView fitHeight="31.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../img/DESIGN.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
+                  <Region layoutX="281.0" layoutY="10.0" prefHeight="60.0" prefWidth="20.0" />
                   <TextField alignment="CENTER" promptText="Enther Product Name" />
-                  <Region prefHeight="60.0" prefWidth="20.0" />
                   <Region layoutX="348.0" layoutY="10.0" prefHeight="60.0" prefWidth="20.0" />
                   <TextField alignment="CENTER" layoutX="189.0" layoutY="28.0" promptText="Enter Amount Required" />
                   <Region layoutX="336.0" layoutY="10.0" prefHeight="60.0" prefWidth="20.0" />
                   <Button layoutX="274.0" layoutY="28.0" mnemonicParsing="false" text="Confirm" />
                </children>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin>
             </HBox>
          </children>
       </VBox>
