--- a/src/main/resources/fxml/Employee.fxml
+++ b/src/main/resources/fxml/Employee.fxml
@@ -23,7 +23,7 @@
                 <TableColumn fx:id="namecol" prefWidth="75.0" text="Name" />
                   <TableColumn fx:id="phonecol" prefWidth="75.0" text="Phone Number" />
                   <TableColumn fx:id="gendercall" prefWidth="75.0" text="Gender" />
-                  <TableColumn prefWidth="75.0" text="Email Id" />
+                  <TableColumn fx:id="emailcol" prefWidth="75.0" text="Email Id" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
