--- a/src/main/resources/fxml/Customer.fxml
+++ b/src/main/resources/fxml/Customer.fxml
@@ -23,7 +23,7 @@
                 <TableColumn fx:id="namecolumn" prefWidth="75.0" text="Name" />
                 <TableColumn fx:id="idcolumn" prefWidth="75.0" text="ID" />
                   <TableColumn fx:id="phonenumbercolumn" prefWidth="75.0" text="Phone Number" />
-                  <TableColumn fx:id="gendercolumn" prefWidth="75.0" text="Expenditure" />
+                  <TableColumn fx:id="expcolumn" prefWidth="75.0" text="Expenditure" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -100,7 +100,7 @@
                      </HBox.margin>
                   </Button>
                   <Region layoutX="77.0" layoutY="10.0" prefHeight="58.0" prefWidth="96.0" />
-                  <Button fx:id="addcustomerbutton1" alignment="CENTER" layoutX="386.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#addcustomer" prefHeight="40.0" prefWidth="54.0">
+                  <Button fx:id="addcustomerbutton1" alignment="CENTER" layoutX="386.0" layoutY="28.0" mnemonicParsing="false" onMouseClicked="#logoutnow" prefHeight="40.0" prefWidth="54.0">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                            <image>
