--- a/src/main/resources/fxml/Stock1.fxml
+++ b/src/main/resources/fxml/Stock1.fxml
@@ -13,16 +13,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="stock_details_borderpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.EmployeeController">
+<BorderPane fx:id="stock_details_borderpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Controller.StockController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView fx:id="tableview" editable="true" prefHeight="341.0" prefWidth="600.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+            <TableView fx:id="p_view" editable="true" prefHeight="341.0" prefWidth="600.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
               <columns>
-                <TableColumn fx:id="stock_product_id_col" prefWidth="75.0" text="Product Id" />
-                <TableColumn fx:id="stock_product_name_col" prefWidth="75.0" text="Product Name" />
-                  <TableColumn fx:id="stock_price_col" prefWidth="75.0" text="Price" />
-                  <TableColumn fx:id="stock_stock_col" prefWidth="75.0" text="Stock" />
+                <TableColumn fx:id="Product_Id" prefWidth="75.0" text="Product_Id" />
+                <TableColumn fx:id="Product_Name" prefWidth="75.0" text="Product_Name" />
+                  <TableColumn fx:id="Price" prefWidth="75.0" text="Price" />
+                  <TableColumn fx:id="Stock" prefWidth="75.0" text="Stock" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -63,7 +63,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="72.0" prefWidth="600.0">
                <children>
-                  <Button fx:id="bytme" mnemonicParsing="false" onMouseClicked="#gottodash" prefHeight="34.0" prefWidth="50.0">
+                  <Button fx:id="bytme" mnemonicParsing="false" onMouseClicked="#stocktodash" prefHeight="34.0" prefWidth="50.0">
                      <graphic>
                         <ImageView fitHeight="25.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -87,13 +87,13 @@
                      </HBox.margin>
                   </TextField>
                   <HBox layoutX="130.0" layoutY="10.0" prefHeight="34.0" prefWidth="11.0" />
-                  <Button fx:id="addstock" layoutX="160.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#addemployee" prefHeight="25.0" prefWidth="40.0" text="Add">
+                  <Button fx:id="addstock" layoutX="160.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#addproductnow" prefHeight="25.0" prefWidth="40.0" text="Add">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
                   </Button>
                   <HBox layoutX="472.0" layoutY="10.0" prefHeight="34.0" prefWidth="113.0" />
-                  <Button mnemonicParsing="false">
+                  <Button mnemonicParsing="false" onMouseClicked="#logoutnow">
                      <graphic>
                         <ImageView fx:id="goback" fitHeight="25.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                            <image>
